deployment/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jobs-api
  namespace: jobs-api
spec:
  type: NodePort
  ports:
    - name: https
      nodePort: 30001
      port: 30001
      targetPort: 30001
      protocol: TCP
  selector:
    name: jobs-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-api
  namespace: jobs-api
  labels:
    name: jobs-api
spec:
  replicas: 2
  selector:
    matchLabels:
      name: jobs-api
  template:
    metadata:
      labels:
        name: jobs-api
    spec:
      serviceAccountName: jobs-api
      volumes:
      - name: home
        hostPath:
          path: /data/project
          type: Directory
      - name: wmcs-project
        hostPath:
          path: /etc/wmcs-project
          type: File
      - name: sssd-pipes
        hostPath:
          path: /var/lib/sss/pipes
          type: Directory
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: jobs-api-server-cert
        secret:
          secretName: jobs-api-server-cert
      - name: jobs-api-containers
        configMap:
          name: jobs-api-containers
          items:
            - key: containers.yaml
              path: containers.yaml
      containers:
        - name: webservice
          image: docker-registry.tools.wmflabs.org/toolforge-jobs-framework-api:latest
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /data/project
            name: home
          - mountPath: /etc/wmcs-project
            name: wmcs-project
            readOnly: true
          - mountPath: /var/lib/sss/pipes
            name: sssd-pipes
          - name: jobs-api-containers
            mountPath: /etc/containers.yaml
            subPath: containers.yaml
            readOnly: true
        - name: nginx
          image: docker-registry.tools.wmflabs.org/nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 30001
              name: https
              protocol: TCP
          volumeMounts:
          - mountPath: /etc/nginx/ssl
            name: jobs-api-server-cert
            readOnly: true
          - name: nginx-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
            readOnly: true
---
