deployment/deployment-kind-local.yaml
---
# https://github.com/kubernetes/ingress-nginx
apiVersion: v1
kind: Namespace
metadata:
  name: jobs-api
  labels:
    # we need this label to bypass the ingress-admission controller
    name: jobs-api
    app.kubernetes.io/name: ingress-nginx-jobs
    app.kubernetes.io/part-of: ingress-nginx-jobs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-jobs
  namespace: jobs-api
  labels:
    app.kubernetes.io/name: ingress-nginx-jobs
    app.kubernetes.io/part-of: ingress-nginx-jobs
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx-jobs
      app.kubernetes.io/part-of: ingress-nginx-jobs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx-jobs
        app.kubernetes.io/part-of: ingress-nginx-jobs
      annotations:
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: jobs-api
      # affinity and taints, only schedule pods in ingress nodes
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ingress
      tolerations:
        - key: "ingress"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: nginx-ingress-controller
          image: docker-registry.tools.wmflabs.org/nginx-ingress-controller:0.25.1
          args:
            - /nginx-ingress-controller
            - --http-port=30001
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
            - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
            - --udp-services-configmap=$(POD_NAMESPACE)/udp-services
            - --publish-service=$(POD_NAMESPACE)/ingress-nginx-jobs-api
            - --annotations-prefix=nginx.ingress.kubernetes.io
            - --ingress-class=jobs
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            # www-data -> 33
            runAsUser: 33
          resources:
            requests:
              cpu: "0.5"
              memory: "1Gi"
          ports:
            - name: http
              containerPort: 30001
            - name: metrics
              containerPort: 10254
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10

---
# from https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/baremetal/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-jobs-api
  namespace: jobs-api
  labels:
    app.kubernetes.io/name: ingress-nginx-jobs
    app.kubernetes.io/part-of: ingress-nginx-jobs
spec:
  type: NodePort
  ports:
    - name: http
      nodePort: 30001
      port: 30001
      targetPort: 30001
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx-jobs
    app.kubernetes.io/part-of: ingress-nginx-jobs
---
# the jobs-api itself
apiVersion: v1
kind: Service
metadata:
  name: jobs-api
  namespace: jobs-api
  labels:
    name: jobs-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: jobs-api
  type: ClusterIP
---
# from https://kubernetes.github.io/ingress-nginx/examples/auth/client-certs/
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jobs-api
  namespace: jobs-api
  annotations:
    # Enable client certificate authentication
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    # Create the secret containing the trusted ca certificates
    # # this was created using: kubectl create secret generic k8s-ca-secret --from-file=ca.crt=/etc/kubernetes/pki/ca.crt
    nginx.ingress.kubernetes.io/auth-tls-secret: "jobs-api/k8s-ca-secret"
    # Specify the verification depth in the client certificates chain
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    # Specify if certificates are passed to upstream server
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    # special ingress
    kubernetes.io/ingress.class: "jobs"
spec:
  rules:
  - host: jobs.svc.toolsbeta.eqiad1.wikimedia.cloud
    http:
      paths:
      - backend:
          serviceName: jobs-api
          servicePort: 8080
        path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-api
  namespace: jobs-api
  labels:
    name: jobs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jobs-api
  template:
    metadata:
      labels:
        name: jobs-api
    spec:
      serviceAccountName: jobs-api
#      volumes:
#      - name: home
#        hostPath:
#          path: /data/project
#          type: Directory
#      - name: wmcs-project
#        hostPath:
#          path: /etc/wmcs-project
#          type: File
#      - name: sssd-pipes
#        hostPath:
#          path: /var/lib/sss/pipes
#          type: Directory
      containers:
        - name: jobs-api
          image: jobs-api:latest
          # kind works this way
          # https://iximiuz.com/en/posts/kubernetes-kind-load-docker-image/
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
#          volumeMounts:
#          - mountPath: /data/project
#            name: home
#          - mountPath: /etc/wmcs-project
#            name: wmcs-project
#            readOnly: true
#          - mountPath: /var/lib/sss/pipes
#            name: sssd-pipes
---
