deployment/deployment-tools.yaml
---
# from https://kubernetes.github.io/ingress-nginx/examples/auth/client-certs/
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jobs-api
  namespace: jobs-api
  annotations:
    # Enable client certificate authentication
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    # Create the secret containing the trusted ca certificates
    # # this was created using: kubectl create secret generic k8s-ca-secret --from-file=ca.crt=/etc/kubernetes/pki/ca.crt
    nginx.ingress.kubernetes.io/auth-tls-secret: "jobs-api/k8s-ca-secret"
    # Specify the verification depth in the client certificates chain
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    # Specify if certificates are passed to upstream server
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    # special ingress
    kubernetes.io/ingress.class: "jobs"
spec:
  tls:
    - hosts:
        - jobs.svc.tools.eqiad1.wikimedia.cloud
      secretName: jobs-api-server-cert
  rules:
  - host: jobs.svc.tools.eqiad1.wikimedia.cloud
    http:
      paths:
      - backend:
          serviceName: jobs-api
          servicePort: 8080
        path: /
